--- a/Draw/Controller/Draw/DrawViewController.xib
+++ b/Draw/Controller/Draw/DrawViewController.xib
@@ -47,7 +47,7 @@
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="531922194"/>
+						<reference key="NSNextKeyView" ref="468657621"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -55,7 +55,7 @@
 							<string key="NSResourceName">wood_bg@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="179296401">
+					<object class="IBUIImageView" id="584911415">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 42}, {320, 370}}</string>
@@ -69,7 +69,7 @@
 							<string key="NSResourceName">paper@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="531922194">
+					<object class="IBUIImageView" id="468657621">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 50}</string>
@@ -83,7 +83,7 @@
 							<string key="NSResourceName">topwood@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="392193164">
+					<object class="IBUIImageView" id="729749896">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{8, 430}, {304, 56}}</string>
@@ -129,7 +129,7 @@
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="576376157">
+						<object class="NSFont" key="IBUIFont" id="1015113692">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
@@ -155,7 +155,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="309240068"/>
 						<reference key="IBUIFontDescription" ref="816856786"/>
-						<reference key="IBUIFont" ref="576376157"/>
+						<reference key="IBUIFont" ref="1015113692"/>
 					</object>
 					<object class="IBUIButton" id="972133712">
 						<reference key="NSNextResponder" ref="774585933"/>
@@ -177,7 +177,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="309240068"/>
 						<reference key="IBUIFontDescription" ref="816856786"/>
-						<reference key="IBUIFont" ref="576376157"/>
+						<reference key="IBUIFont" ref="1015113692"/>
 					</object>
 					<object class="IBUIButton" id="95547328">
 						<reference key="NSNextResponder" ref="774585933"/>
@@ -199,7 +199,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="309240068"/>
 						<reference key="IBUIFontDescription" ref="816856786"/>
-						<reference key="IBUIFont" ref="576376157"/>
+						<reference key="IBUIFont" ref="1015113692"/>
 					</object>
 					<object class="IBUIButton" id="385138608">
 						<reference key="NSNextResponder" ref="774585933"/>
@@ -221,7 +221,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="309240068"/>
 						<reference key="IBUIFontDescription" ref="816856786"/>
-						<reference key="IBUIFont" ref="576376157"/>
+						<reference key="IBUIFont" ref="1015113692"/>
 					</object>
 					<object class="IBUIButton" id="272228727">
 						<reference key="NSNextResponder" ref="774585933"/>
@@ -243,7 +243,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="309240068"/>
 						<reference key="IBUIFontDescription" ref="816856786"/>
-						<reference key="IBUIFont" ref="576376157"/>
+						<reference key="IBUIFont" ref="1015113692"/>
 					</object>
 					<object class="IBUILabel" id="306458966">
 						<reference key="NSNextResponder" ref="774585933"/>
@@ -251,7 +251,7 @@
 						<string key="NSFrame">{{0, 365}, {320, 30}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="392193164"/>
+						<reference key="NSNextKeyView" ref="729749896"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -351,7 +351,7 @@
 						<string key="NSFrame">{{278, 5}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="179296401"/>
+						<reference key="NSNextKeyView" ref="584911415"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -367,7 +367,7 @@
 							<string key="NSResourceName">changeroom@2x.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="816856786"/>
-						<reference key="IBUIFont" ref="576376157"/>
+						<reference key="IBUIFont" ref="1015113692"/>
 					</object>
 					<object class="IBUIButton" id="402388376">
 						<reference key="NSNextResponder" ref="774585933"/>
@@ -457,7 +457,7 @@
 						<string key="NSFrame">{{205, 409}, {28, 33}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="929615879"/>
+						<reference key="NSNextKeyView" ref="232382231"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -476,7 +476,7 @@
 						<reference key="IBUIFontDescription" ref="368620581"/>
 						<reference key="IBUIFont" ref="201228338"/>
 					</object>
-					<object class="IBUIButton" id="929615879">
+					<object class="IBUIButton" id="232382231">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{249, 405}, {38, 37}}</string>
@@ -572,6 +572,22 @@
 					<int key="connectionID">97</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">clockButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="232382231"/>
+					</object>
+					<int key="connectionID">98</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">penButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="402388376"/>
+					</object>
+					<int key="connectionID">99</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickRedraw:</string>
 						<reference key="source" ref="70881159"/>
@@ -588,6 +604,15 @@
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">96</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickPenButton:</string>
+						<reference key="source" ref="402388376"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">100</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -631,11 +656,11 @@
 							<reference ref="402388376"/>
 							<reference ref="660089897"/>
 							<reference ref="70881159"/>
-							<reference ref="531922194"/>
-							<reference ref="179296401"/>
+							<reference ref="468657621"/>
+							<reference ref="584911415"/>
 							<reference ref="220956365"/>
-							<reference ref="392193164"/>
-							<reference ref="929615879"/>
+							<reference ref="729749896"/>
+							<reference ref="232382231"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -716,22 +741,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">82</int>
-						<reference key="object" ref="531922194"/>
+						<reference key="object" ref="468657621"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">84</int>
-						<reference key="object" ref="392193164"/>
+						<reference key="object" ref="729749896"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">85</int>
-						<reference key="object" ref="929615879"/>
+						<reference key="object" ref="232382231"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">83</int>
-						<reference key="object" ref="179296401"/>
+						<reference key="object" ref="584911415"/>
 						<reference key="parent" ref="774585933"/>
 					</object>
 				</object>
@@ -805,7 +830,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">97</int>
+			<int key="maxID">100</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -818,16 +843,10 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>clickEraserButton:</string>
-							<string>clickMoreColorButton:</string>
-							<string>clickPickWidthButton:</string>
 							<string>clickRedraw:</string>
-							<string>pickColor:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 						</object>
@@ -837,10 +856,7 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>clickEraserButton:</string>
-							<string>clickMoreColorButton:</string>
-							<string>clickPickWidthButton:</string>
 							<string>clickRedraw:</string>
-							<string>pickColor:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -849,19 +865,7 @@
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
-								<string key="name">clickMoreColorButton:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">clickPickWidthButton:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
 								<string key="name">clickRedraw:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">pickColor:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 						</object>
@@ -874,7 +878,7 @@
 							<string>clockButton</string>
 							<string>eraserButton</string>
 							<string>guessMsgLabel</string>
-							<string>moreButton</string>
+							<string>penButton</string>
 							<string>wordLabel</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -895,7 +899,7 @@
 							<string>clockButton</string>
 							<string>eraserButton</string>
 							<string>guessMsgLabel</string>
-							<string>moreButton</string>
+							<string>penButton</string>
 							<string>wordLabel</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -917,7 +921,7 @@
 								<string key="candidateClassName">UILabel</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">moreButton</string>
+								<string key="name">penButton</string>
 								<string key="candidateClassName">UIButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
